# kyouth-data-ai-2026

./: pyproject.toml
week_1/: .gitignore  README.md  main.py  pyproject.toml
week_1/data/1_bronze/: Junior Back End Developer (PHP Laravel) Job in Maluri, Kuala Lumpur - Jobstreet.html  Junior Software Engineer (QA & Automation) - JB Job in Johor Bahru, Johor - Jobstreet.html  RIDME.md  SOFTWARE ENGINEER Job in Bayan Lepas, Penang - Jobstreet.html
week_1/data/3_gold/: jobs.db
week_1/src/: ingestor.py  loader.py  processor.py  profiler.py
week_2/: README.md  find_skill_gaps.py  prompt_model.py  pyproject.toml  rate_limits.txt  tag_data.py
week_2/data/: jobs_d1.db
week_3/: README.md  docker-compose.yml
week_3/backend/: .gitignore  Dockerfile  backend_Dockerfile  env  find_skill_gaps.py  jobs.db  main.py  prompt_model.py  pyproject.toml  requirements.txt  tag_data.py
week_3/frontend/: .env  Dockerfile  frontend_Dockerfile  pyproject.toml  requirements.txt
week_3/frontend/src/: main.py
week_3/frontend/src/templates/: dashboard.html  index.html
week_4/: .env.example  .gitignore  Docker-compose.yml  pyproject.toml
week_4/backend/: Dockerfile
week_4/backend/src/: ai_map.py  ai_reduce.py  database.py  ingestion.py  main.py  schemas.py
week_4/frontend/: Dockerfile
week_4/frontend/app/: page.tsx
